{
    "name": "FishingInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7397e19a-1d3d-4c70-9fa2-8c923489fe7a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0c18f9c0-6f0f-4283-b3a3-99e511018dd4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fish",
                    "type": "Button",
                    "id": "2d94ce9a-9d7f-4ce7-a624-044cc80d8cd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Menu",
                    "type": "Button",
                    "id": "77da7d6b-7156-4399-8c82-97ec53d712b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrow Keys",
                    "id": "a99b75c1-a18f-40f4-86a0-3fcad6930f8b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "45b2d720-fd48-4a1f-ae0e-1b6967e8666c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "63d637c0-b6bf-4bd8-9978-3bfaf6470fcc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "ad3f22c2-c837-4ddb-906c-b1037db853b5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "661e98bc-1763-4458-96f7-22a3ea4e919b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "47372f62-07ef-45cb-9a12-13b8b2e417f0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "978bfe49-cc26-4a3d-ab7b-7d7a29327403",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1635d3fe-58b6-4ba9-a4e2-f4b964f6b5c8",
                    "path": "<XRController>/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ea4d645-4504-4529-b061-ab81934c3752",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43c1ec79-8922-4e96-a9dc-4d4901897d28",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a778b6f-d422-46e7-bb35-6f52ed287f2f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7c32bc3-2a41-4ad8-b385-59ed455cd5c6",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Fish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7dad84b-5a1f-4048-818c-eb657b9846d0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bf22c04-baf2-4032-9930-84c14b5f499c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fish",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MotionTracking",
            "id": "311d012f-0bec-4ac1-8716-eb969ae1ac76",
            "actions": [
                {
                    "name": "FootRaise",
                    "type": "Button",
                    "id": "001f4548-f435-42e2-86cc-67d34458ba85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FootLower",
                    "type": "Button",
                    "id": "3324b18f-944e-4fd5-91ef-0e1c291614fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FootHeight",
                    "type": "Value",
                    "id": "189895c2-e544-4d43-a072-cc3b2d9ed35f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WeightShiftX",
                    "type": "Value",
                    "id": "fecdee9b-cb41-4f26-b01b-19669b67ccc1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WeightShiftLeft",
                    "type": "Button",
                    "id": "3b5fc752-dbc2-4fdb-9c01-f333c4cec19d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeightShiftRight",
                    "type": "Button",
                    "id": "b1bdedda-b90e-43eb-93a1-bc42d16f8b47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuadrantOne",
                    "type": "Button",
                    "id": "6cc05313-abb7-4e2c-9262-d95054056022",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuadrantTwo",
                    "type": "Button",
                    "id": "68f9848f-0a1a-4a2a-b00a-fea7bf7e1947",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuadrantThree",
                    "type": "Button",
                    "id": "f0a32dcf-6c18-4cf2-a35e-800dd48681ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuadrantFour",
                    "type": "Button",
                    "id": "75649a89-2722-4ac2-8b22-df86e7937939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AllQuadrantsComplete",
                    "type": "Button",
                    "id": "a464d6d9-eeff-4c86-b6fd-746c7c2807f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHipAbducted",
                    "type": "Button",
                    "id": "c9468e73-6649-4448-b1e9-099eb248fa74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHipAbducted",
                    "type": "Button",
                    "id": "77ce57a3-34ac-4760-95c3-d06e71816143",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbductionDistance",
                    "type": "Button",
                    "id": "49e32ad9-d53d-47d6-b40e-7b4c7f90f622",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftFootHeight",
                    "type": "Button",
                    "id": "4129274d-4354-4c88-a91e-e7e52c6116c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightFootHeight",
                    "type": "Button",
                    "id": "4f1c5e30-05d0-4628-a2e9-8257c249040d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d176776-6af5-4315-a735-c4ed90358435",
                    "path": "<CapturyInput>/footRaise",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FootRaise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "594ecad9-5f74-48d1-9686-c635ac908a7b",
                    "path": "<CapturyInput>/footLower",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FootLower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26317c10-bb38-479c-bdbf-b886b16bd72b",
                    "path": "<CapturyInput>/footHeight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FootHeight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43de1481-bc47-421c-872a-2ce2a58e80e7",
                    "path": "<CapturyInput>/weightShiftX",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeightShiftX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c4c1fe8-bcd9-4728-8832-61bf9061dc3a",
                    "path": "<CapturyInput>/weightShiftLeft",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeightShiftLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ce23f1e-e6ed-425d-86d2-c8062fbfb207",
                    "path": "<CapturyInput>/weightShiftRight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeightShiftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "892cbacf-38f0-4ed8-ae48-1050b4ba6e1d",
                    "path": "<CapturyInput>/quadrantOne",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuadrantOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e070916-b56f-4c17-8d2e-41d04070b1bc",
                    "path": "<CapturyInput>/quadrantTwo",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuadrantTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5120b6c3-e4b6-47c5-9657-5dd183422dfb",
                    "path": "<CapturyInput>/quadrantThree",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuadrantThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6b59961-ab45-46de-9f6e-7da8688ff44c",
                    "path": "<CapturyInput>/quadrantFour",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuadrantFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db76ac4f-bfdf-44ea-ae3d-7384dec37dff",
                    "path": "<CapturyInput>/allQuadrantsComplete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AllQuadrantsComplete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5583f71-928f-4519-b3d0-a8a0c4895ae5",
                    "path": "<CapturyInput>/leftHipAbducted",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHipAbducted",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07c186e-0afc-4949-adcd-ff9e3ba89b1c",
                    "path": "<CapturyInput>/rightHipAbducted",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHipAbducted",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fae7ae2b-2013-4a11-8c88-ac34790a645b",
                    "path": "<CapturyInput>/abductionDistance",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbductionDistance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce52b689-a5d7-4a6e-ab91-34f3ee3f2654",
                    "path": "<CapturyInput>/leftFootHeight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFootHeight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "908a5ab9-6fe7-4d0d-9547-e3a2d8ce7b81",
                    "path": "<CapturyInput>/rightFootHeight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFootHeight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}